[workspace]

members = [
    "convert",
    "fib",
    "owner",
    "rc",
    "refCell",
    "life",
    "type_system",
    "trait_exam",
    "arc",
    "mystring",
    "mymap",
    "closure",
    "kv",
    "cs",
    "mpsc",
    "con_utils",
    "grep",
    "match_default",
    "getinfo",
    "get_info_fream",
    "tokio_sync",
    "error_check",
    "micro"
]

