[workspace]
resolver = "2"

members = [
    "convert",
    "fib",
    "owner",
    "rc",
    "refCell",
    "life",
    "type_system",
    "trait_exam",
    "arc",
    "mystring",
    "mymap",
    "closure",
    "kv",
    "cs",
    "mpsc",
    "con_utils",
    "grep",
    "match_default",
    "getinfo",
    "get_info_fream",
    "tokio_sync",
    "error_check",
    "micro",
    "axum_test",
    "leet_code",
    "project",
    "minigrep",
    "self_ref",
    "thread",
    "http_web",
    "my_redis",
    "test-tracing",
    "lists",
    "web01",
    "stu",
    "hello_macro",
    "csv_test",
    "hello_macro_derive", "timer_future", "zino", "lt", "fighting", "ws_test"]
