[package]
name = "fighting"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
serde = {version="1.0",features = ["derive"]}
serde_yaml = "0.8.23"
serde_json = "1.0"
clap = { version = "4.5.16", features = ["derive"] }
tokio = { version = "1.20", features = ["tracing", "signal", "macros","rt-multi-thread"] }
anyhow = { version = "1.0", features = ["backtrace"] }
config = { version = "0.14", features = ["yaml"], default-features = false }

