[package]
name = "stu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="main1"
path ="src/cccc/main1.rs"
[[bin]]
name="main2"
path ="src/cccc/main2.rs"
[[bin]]
name="main"
path ="src/main.rs"
[dependencies]
