[package]
name = "web01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.4",features = ["ws"]}
axum-extra = {version = "0.8"}
tokio = {version = "1.0", features = ["full"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3",features = ["env-filter"]}
serde = {version = "1.0",features = ["derive"]}
serde_json = "1.0"
tower-http = {version = "0.5.0",features = ["full"]}
tower = "0.4.13"
sqlx = {version = "0.7",features = ["runtime-tokio","tls-rustls","mysql"]}
dotenvy = "0.15"
jsonwebtoken="9"
anyhow= "1.0"
time={version = "0.3",features = ["serde-human-readable"]}
askama="0.12"
matchit = "0.7.3"
rand="0.8.5"
http="1.0.0"
hyper="0.14.27"
futures = "0.3"
